# money-glitch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  order_book.cpp  order_book.hpp  runner.json
infra/: engine.cpp  engine.hpp  ws_client.hpp
protocols/: feed_adapter.hpp
protocols/kalshi/: kalshi_auth.cpp  kalshi_auth.hpp  kalshi_order_book.cpp  kalshi_order_book.hpp  kalshi_order_book_manager.cpp  kalshi_order_book_manager.hpp  kalshi_ws_adapter.cpp  kalshi_ws_adapter.hpp
strategy/: avellaneda_stoikov.cpp  avellaneda_stoikov.hpp  kalshi_mm.cpp  kalshi_mm.hpp  strategy.hpp  types.hpp
strategy/positions/: position_manager.cpp  position_manager.hpp  ticker_position_ledger.cpp  ticker_position_ledger.hpp
tests/: position_manager_test.cpp
utils/: rsa_pss.cpp  rsa_pss.hpp
